# Clip4Clips

./: .gitignore  AGENTS.md  QUICKSTART.md  README.md  SOUL.md  docker-compose.prod.yml  package-lock.json  package.json
.github/workflows/: deploy-landing.yml  deploy.yml
KANBAN-AND-DOCS/: CLIPFORGE-BUSINESS-BLUEPRINT.md  ClipTi-spec v0.0.1.md  README.md
config/: .env.example  init.sql  mcp.example.json
docker/: Dockerfile.api  Dockerfile.scheduler  Dockerfile.worker  crontab  docker-compose.yml  nginx.conf
docs/: API.md  DEPLOY-SHARED-HOST.md  DEPLOYMENT.md  FORMULA-UGC-PIPELINE.md  HERMES_SETUP.md  LAST30DAYS.md  OPERATE.md  TROUBLESHOOTING.md  WHOP_INTEGRATION.md
landing/: Dockerfile  README.md  index.html
scripts/: auto-deploy.sh  bootstrap.sh  data-export.sh  data-import.sh  deploy.sh  leads-probe.mjs  mcp-smoke.mjs  preflight.mjs  smoke-check.js  smoke.sh
skills/clipforge-operator/: SKILL.md
skills/communication/: SKILL.md
skills/creativity/: SKILL.md
skills/mental-models-operator/: SKILL.md
skills/talking-head-content/: SKILL.md
skills/upsell-funnel/: SKILL.md
src-tauri/: .gitignore  Cargo.toml  QUICKSTART.md  README.md  TODO.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/frontend/: index.html
src-tauri/src/: api.rs  commands.rs  db.rs  lib.rs  main.rs  queue.rs  sidecar.rs
src/api/: server.js
src/integration/: asr.js  hermes.js  llm.js  whop.js
src/mcp/: server.mjs
src/production/: higgsfield.js  pipeline.js  stockreel.js
src/scheduler/: index.js
src/worker/: index.js
tools/: economics.html
